gw-west.yml
apiVersion: v1
kind: Service
metadata:
  name: istio-eastwestgateway
  labels:
    istio: eastwestgateway
    app: istio-eastwestgateway
    topology.istio.io/network: west-network
spec:
  type: NodePort
  selector:
    istio: eastwestgateway
  ports:
  - name: status-port
    port: 15021
    targetPort: 15021
  - name: tls
    port: 15443
    targetPort: 15443
    nodePort: 30443
  - name: tls-istiod
    port: 15012
    targetPort: 15012
  - name: tls-webhook
    port: 15017
    targetPort: 15017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-eastwestgateway
  labels:
    istio: eastwestgateway
    app: istio-eastwestgateway
spec:
  selector:
    matchLabels:
      istio: eastwestgateway
  template:
    metadata:
      annotations:
        inject.istio.io/templates: gateway
      labels:
        istio: eastwestgateway
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: istio-proxy
        image: auto
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-eastwestgateway
spec:
  selector:
    istio: eastwestgateway
  servers:
  - port:
      number: 15443
      name: tls
      protocol: TLS
    hosts:
    - "*.local"
    tls:
      mode: AUTO_PASSTHROUGH
